--- a/templates/base.html
+++ b/templates/base.html
@@ -32,14 +32,10 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                {% if user %}
-                    <li><a href="#">wzup</a></li>
-                {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user %}
-                    <li><a>Hello! <strong>{{ user.name }}</strong></a></li>
-                    <li><a href="/logout">Logout</a></li>
+                    <li><a href="/logout">Logout {{ user.name }}</a></li>
                 {% else %}
                     <li><a href="/login">Login</a></li>
                     <li><a href="/signup">Signup</a></li>
