--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,6 +29,8 @@
 
     <p class="text-danger">{{ error }}</p>
 
+    <input type="hidden" name="referer" id="referer" value="{{ next_url}}">
+
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
